# PlatypusGame

./: .gitignore  CMakeLists.txt  EloRandomTournament.cpp  EloRandomTournament.h  GlickoRandomTournament.cpp  GlickoRandomTournament.h  PartialRoundRobinTournament.cpp  PartialRoundRobinTournament.h  PlatypusGame.cpp  PlatypusGame.h  README.md  RoundRobinTournament.cpp  RoundRobinTournament.h  SingleEliminationTournament.cpp  SingleEliminationTournament.h  Tournament.h  TournamentRunner.cpp  TournamentRunner.h  main.cpp
include/elo/: elo.hpp
include/glicko2/: rating.cpp  rating.hpp
